2003-05-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/define-grobs.scm: uniform naming for definitions and output
	routine files. 

	* ly/engraver-init.ly (ChoirStaffContext): add \description from
	scm/context-description.scm

	* lily/parser.yy (translator_spec_body): add \description to the
	\translator{} body syntax.

	* lily/ottava-engraver.cc: new file.

	* scm/chord-name.scm (natural-chord-alteration): replace old
	chord stuff. 

	* input/mutopia/R.Schumann/romanze-op28-2.ly: syntax updates.

	* Documentation/user/refman.itely (Metronome marks): update doco.

	* input/regression/markup-note.ly: new file

	* input/regression/metronome-marking.ly: new file

	* lily/metronome-engraver.cc: new file. Print \tempo markings.

	* scm/new-markup.scm (note-markup): make a note glyph, useful for
	metronome marks.

2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile: Compatibility fix for new
	makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90 (rsn)
	for making binary packages; info splitting bug has been fixed.

	* Documentation/user/refman.itely: Compile fixes.

2003-05-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: XEmacs-fix: Use (mark) to find active-mark.
	Count \midi -keywords also for a region.

2003-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lookup.cc (LY_DEFINE): new function

	* Documentation/user/tutorial.itely: updates

2003-05-15  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Allow Midi on buffer.
	Use only '.ly'-extension, remove '.sly' and '.fly'.
	Allow use of inactive regions. Invoke next Command on Master file, 
	Buffer or Region, if C-cc, C-cb, or C-cr, accordingly, was pressed.

2003-05-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely: updates.

2003-05-14  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Show messages in one line only, as in XEmacs.

2003-05-13  Juergen Reuter  <reuter@ipd.uka.de>
