@@ -1,3 +1,9 @@
+2003-05-18  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* lilypond-font-lock.el: Add postfix syntax for horizontal groups.
+
+	* lilypond.words: add 3.
+
 2003-05-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* scm/define-grobs.scm: uniform naming for definitions and output
